# bitonic-sort-cuda

./: .gitignore  CMakeLists.txt  README.md  bitonic_sort.cu  bitonic_sort.h  bitonic_wrapper.cpp  main.cpp  run_benchmark.sh  run_brook.sh  run_moore.sh  run_octane.sh  wrapper.py  wrapper_with_plotting.py
logs/: benchmark_121183.out  benchmark_121185.out  benchmark_121955.out  benchmark_121972.out
results/: brook_bitonic_sort_benchmark_20250712_131109.csv  brook_bitonic_sort_benchmark_20250714_184134.csv  moore_bitonic_sort_benchmark_20250712_131012.csv  octane_bitonic_sort_benchmark_20250714_205149.csv
